Actualización archivos de config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 #MongoDB
-spring.data.mongodb.host=127.0.0.1
-spring.data.mongodb.port=27017
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.database=promotions
-spring.data.mongodb.username=productListUser
-spring.data.mongodb.password=productListPassword
+#spring.data.mongodb.host=127.0.0.1
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.database=promotions
+#spring.data.mongodb.username=productListUser
+#spring.data.mongodb.password=productListPassword
 
+#Prod
+spring.data.mongodb.uri=mongodb+srv://gfernandez:productListPassword@cluster0.4nkch.mongodb.net/promotions?retryWrites=true&w=majority
 
 #App
 server.port=8080
